Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -60,7 +60,7 @@
     "# Function to add two numbers \n",
     "def add(num1, num2):\n",
     "    #Perform the calculation\n",
-    "    return None"
+    "    return num1 + num2"
    ]
   },
   {
@@ -72,7 +72,7 @@
     "# Function to subtract two numbers \n",
     "def subtract(num1, num2):\n",
     "    #Perform the calculation\n",
-    "    return None"
+    "    return num1 - num2"
    ]
   },
   {
@@ -84,7 +84,7 @@
     "# Function to multiply two numbers\n",
     "def multiply(num1, num2):\n",
     "    #Perform the calculation\n",
-    "    return None"
+    "    return num1 * num2"
    ]
   },
   {
@@ -96,7 +96,7 @@
     "# Function to divide two numbers\n",
     "def divide(num1, num2):\n",
     "    #Perform the calculation\n",
-    "    return None"
+    "    return num1 / num2"
    ]
   },
   {
@@ -116,27 +116,47 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please select operation -\n",
+      "Please select an operation:\n",
       "1. Add\n",
       "2. Subtract\n",
       "3. Multiply\n",
       "4. Divide\n",
-      "\n",
-      "Select operations form 1, 2, 3, 4 :1\n",
-      "Enter first number: 2\n",
-      "Enter second number: 3\n",
+      "Select operation from 1,2,3,4:1\n",
+      "Enter first number:2\n",
+      "Enter second number:3\n",
       "2 + 3 = 5\n"
      ]
     }
    ],
    "source": [
     "# Print user menu \n",
-    "\n",
+    "print('Please select an operation:\\n' \\\n",
+    "     '1. Add\\n'\n",
+    "     '2. Subtract\\n'\n",
+    "     '3. Multiply\\n'\n",
+    "     '4. Divide')\n",
     "\n",
     "# Take input from the user for operation , followed by numbers. \n",
+    "select = input('Select operation from 1,2,3,4:')\n",
     "\n",
+    "num_1 = int(input('Enter first number:'))\n",
+    "num_2 = int(input('Enter second number:'))\n",
     "\n",
     "# Based on operation, pass the two numbers to respective function\n",
+    "if select == '1':\n",
+    "    print(num_1, '+', num_2, '=', add(num_1,num_2))\n",
+    "    \n",
+    "elif select == '2': \n",
+    "    print(num_1, '-', num_2, '=', subtract(num_1,num_2))\n",
+    "    \n",
+    "elif select == '3':\n",
+    "    print(num_1, '*', num_2, '=', multiply(num_1,num_2))\n",
+    "    \n",
+    "elif select == '4':\n",
+    "    print(num_1, '/', num_2, '=', divide(num_1,num_2))\n",
+    "    \n",
+    "else:\n",
+    "    print('Invalid input')\n",
     "# Print the output in a nice manner\n",
     "# Print \"Invalid input\" if an unexpected character is seen in input\n",
     "\n",
@@ -189,12 +209,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Select operations form 1, 2, 3, 4 :4\n",
+      "Enter first number: 5\n",
+      "Enter second number: 4\n",
+      "5 / 4 = 1.25\n",
+      "Continue? y/n:y\n"
+     ]
+    }
+   ],
    "source": [
     "# Initialize the code with cont (continue) flag set to yes (y)\n",
-    "\n",
+    "cont = 'y'\n",
+    "while cont == 'y':\n",
+    "    select = input(\"Select operations form 1, 2, 3, 4 :\")\n",
+    "    number_1 = int(input(\"Enter first number: \"))\n",
+    "    number_2 = int(input(\"Enter second number: \"))\n",
+    "    if select == '1':\n",
+    "        print(number_1, \"+\", number_2, \"=\",\n",
+    "                    add(number_1, number_2))\n",
+    "    elif select == '2':\n",
+    "        print(number_1, \"-\", number_2, \"=\",\n",
+    "                    subtract(number_1, number_2))\n",
+    "    elif select == '3':\n",
+    "        print(number_1, \"*\", number_2, \"=\",\n",
+    "                    multiply(number_1, number_2))\n",
+    "    elif select == '4':\n",
+    "        print(number_1, \"/\", number_2, \"=\",\n",
+    "                    divide(number_1, number_2))\n",
+    "    cont = input('Continue? y/n:')\n",
+    "    if cont == 'n':\n",
+    "        break\n",
+    "    \n",
     "\n",
     "# Check for user input after each iteration of the code in a while loop\n",
     "\n",
@@ -231,12 +283,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def divide_v2(num1, num2):\n",
     "    #Perform the calculation\n",
+    "    div = input('Press d for division and m for modulo operator')\n",
+    "    if div == 'd':\n",
+    "        return num1 / num2\n",
+    "    elif div == 'm':\n",
+    "        return num1 % num2\n",
+    "    else:\n",
+    "        print (\"Invalid input\")\n",
     "    return None"
    ]
   },
@@ -266,7 +325,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
